# Local-Image-Editor

./: .gitignore  CMakeLists.txt  README.md
resources/scripts/: download_depth_estimation_model.py  download_sd_model.py  download_sd_model.sh  requirements.txt
resources/scripts/inference/: depth-estimation-generator.py  depth_estimation_result.txt  generate_ai_image.py  inpainting.py  inpainting_result.txt  oneshot-background-removal.py  requirements.txt  sam.py
src/: CustomConfirmationDialog.cpp  CustomConfirmationDialog.h  ImageObject.h  ImageToolbar.cpp  ImageToolbar.h  MainWindow.cpp  MainWindow.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  main.cpp  pybind_wrapper.cpp  pybind_wrapper.h
